--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.9",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -28,6 +29,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
